MAINT: now shows random result instead of hardcoded png

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -191,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "!python test.py --dataroot datasets/horse2zebra/testA --name horse2zebra_pretrained --model test --no_dropout --use_wandb"
+    "!python test.py --dataroot datasets/horse2zebra/testA --name horse2zebra --model test --no_dropout --use_wandb --gpu_ids -1"
    ]
   },
   {
@@ -215,25 +215,35 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "import glob\n",
     "\n",
-    "img = plt.imread('./results/horse2zebra_pretrained/test_latest/images/n02381460_1010_fake.png')\n",
-    "plt.imshow(img)"
+    "from enum import Enum\n",
+    "\n",
+    "RESULTS_PATH = \"./results/horse2zebra/test_latest/images\"\n",
+    "\n",
+    "class ResultType(Enum):\n",
+    "    FAKE = \"fake\"\n",
+    "    REAL = \"real\"\n",
+    "\n",
+    "def show_random_result(result_type: ResultType):\n",
+    "    result_search_wildcard = f\"{RESULTS_PATH}/*_{result_type.value}.png\"\n",
+    "    file_list = glob.glob(result_search_wildcard)\n",
+    "\n",
+    "    random_file = random.choice(file_list)\n",
+    "\n",
+    "    img = plt.imread(random_file)\n",
+    "    plt.suptitle(t=os.path.basename(random_file))\n",
+    "    plt.imshow(img)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "0G3oVH9DyqLQ"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "img = plt.imread('./results/horse2zebra_pretrained/test_latest/images/n02381460_1010_real.png')\n",
-    "plt.imshow(img)"
+    "show_random_result(ResultType.FAKE)"
    ]
   }
  ],
