--- a/video_extraction.ipynb
+++ b/video_extraction.ipynb
@@ -6,8 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import hashlib\n",
     "import os\n",
+    "os.chdir('cyclegan')\n",
+    "\n",
+    "!pip install -r requirements_dev.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
     "import cv2\n",
     "import logging\n",
     "import shutil\n",
@@ -23,12 +34,12 @@
     "\n",
     "# Folder names\n",
     "ROOT_DATASET_FOLDER = \"datasets\"\n",
-    "DATASET_NAME = \"threeD2twoD_unsupervised\"\n",
-    "A_3D_VIDEO_FILE = \"A_3D_512.mp4\"\n",
-    "B_2D_VIDEO_FILE = \"B_2D_512.mp4\"\n",
+    "DATASET_NAME = \"threeD2twoD\"\n",
+    "A_3D_VIDEO_FILE = \"A_3D_256.mp4\"\n",
+    "B_2D_VIDEO_FILE = \"B_2D_256.mp4\"\n",
     "\n",
-    "A_3D_OUTPUT_FOLDER = \"A_3D_512_frames\"\n",
-    "B_2D_OUTPUT_FOLDER = \"B_2D_512_frames\"\n",
+    "A_3D_OUTPUT_FOLDER = \"A_3D_256_frames\"\n",
+    "B_2D_OUTPUT_FOLDER = \"B_2D_256_frames\"\n",
     "\n",
     "# Paths\n",
     "A_3D_VIDEO_PATH = os.path.join(ROOT_DATASET_FOLDER, DATASET_NAME, A_3D_VIDEO_FILE)\n",
@@ -183,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('env_pytorch')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3910jvsc74a57bd03fdd83f970eae321269de83268b2a3fe839e49cd885e03ae8e33a1396669f1df"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -197,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
