MAINT: update links to repo

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -17,7 +17,7 @@
     "id": "5VIGyIus8Vr7"
    },
    "source": [
-    "Take a look at the [repository](https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix) for more information"
+    "Take a look at the [repository](https://github.com/akiyamasho/cyclegan) for more information"
    ]
   },
   {
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix"
+    "!git clone https://github.com/akiyamasho/cyclegan"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('pytorch-CycleGAN-and-pix2pix/')"
+    "os.chdir('cyclegan')"
    ]
   },
   {
@@ -159,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "!python train.py --dataroot ./datasets/horse2zebra --name horse2zebra --model cycle_gan --use_wandb"
+    "!python train.py --dataroot ./datasets/threeD2twoD --name threeD2twoD --model cycle_gan --use_wandb"
    ]
   },
   {
@@ -175,7 +175,7 @@
     "\n",
     "Change the `--dataroot` and `--name` to be consistent with your trained model's configuration.\n",
     "\n",
-    "> from https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix:\n",
+    "> from https://github.com/akiyamasho/cyclegan:\n",
     "> The option --model test is used for generating results of CycleGAN only for one side. This option will automatically set --dataset_mode single, which only loads the images from one set. On the contrary, using --model cycle_gan requires loading and generating results in both directions, which is sometimes unnecessary. The results will be saved at ./results/. Use --results_dir {directory_path_to_save_result} to specify the results directory.\n",
     "\n",
     "> For your own experiments, you might want to specify --netG, --norm, --no_dropout to match the generator architecture of the trained model."
@@ -261,7 +261,7 @@
    "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-3:m74"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
