--- a/pix2pix.ipynb
+++ b/pix2pix.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix"
+    "!git clone https://github.com/akiyamasho/cyclegan"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "\n",
     "-   `bash ./datasets/download_pix2pix_dataset.sh [cityscapes, night2day, edges2handbags, edges2shoes, facades, maps]`\n",
     "\n",
-    "Or use your own dataset by creating the appropriate folders and adding in the images. Follow the instructions [here](https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix/blob/master/docs/datasets.md#pix2pix-datasets)."
+    "Or use your own dataset by creating the appropriate folders and adding in the images. Follow the instructions [here](https://github.com/akiyamasho/cyclegan/blob/master/docs/datasets.md#pix2pix-datasets)."
    ]
   },
   {
@@ -158,7 +158,7 @@
     "\n",
     "Change the `--dataroot`, `--name`, and `--direction` to be consistent with your trained model's configuration and how you want to transform images.\n",
     "\n",
-    "> from https://github.com/junyanz/pytorch-CycleGAN-and-pix2pix:\n",
+    "> from https://github.com/akiyamasho/cyclegan:\n",
     "> Note that we specified --direction BtoA as Facades dataset's A to B direction is photos to labels.\n",
     "\n",
     "> If you would like to apply a pre-trained model to a collection of input images (rather than image pairs), please use --model test option. See ./scripts/test_single.sh for how to apply a model to Facade label maps (stored in the directory facades/testB).\n",
