MAINT: added pix2pix dataset setup

--- a/video_extraction.ipynb
+++ b/video_extraction.ipynb
@@ -26,6 +26,7 @@
     "import math\n",
     "\n",
     "from tqdm.notebook import tqdm_notebook\n",
+    "from PIL import Image\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "logger = logging.getLogger(__name__)\n",
@@ -54,7 +55,7 @@
     "\n",
     "OUTPUT_IMAGE_EXT = \".png\"\n",
     "\n",
-    "SHOULD_RANDOMISE_FILENAMES = True\n"
+    "SHOULD_RANDOMISE_FILENAMES = False # Set this to True to shuffle the images\n"
    ]
   },
   {
@@ -127,6 +128,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CycleGAN Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -187,14 +195,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "split_train_test(raw_dataset_path=B_2D_RAW_DATASET_PATH, train_path=TRAIN_B_PATH, test_path=TEST_B_PATH)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Pix2Pix Preparation"
+   ]
   },
   {
    "cell_type": "code",
@@ -202,8 +212,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_train_test(raw_dataset_path=B_2D_RAW_DATASET_PATH, train_path=TRAIN_B_PATH, test_path=TEST_B_PATH)"
+    "# Train/Test/Val Split Config\n",
+    "# This assumes A to B\n",
+    "\n",
+    "TRAIN_SPLIT = 0.8\n",
+    "TEST_SPLIT = 0.1\n",
+    "VAL_SPLIT = 1 - (TRAIN_SPLIT + TEST_SPLIT)\n",
+    "\n",
+    "SIDEBYSIDE_IMAGE_PATH = os.path.join(ROOT_DATASET_FOLDER, DATASET_NAME, \"sidebyside\")\n",
+    "\n",
+    "TRAIN_PATH = os.path.join(ROOT_DATASET_FOLDER, DATASET_NAME, \"test\")\n",
+    "TEST_PATH = os.path.join(ROOT_DATASET_FOLDER, DATASET_NAME, \"train\")\n",
+    "VAL_PATH = os.path.join(ROOT_DATASET_FOLDER, DATASET_NAME, \"val\")\n",
+    "\n",
+    "IMAGE_DIMENSION = 256\n",
+    "MERGED_WIDTH = IMAGE_DIMENSION * 2\n",
+    "CHANNELS = \"RGB\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_two_images(image_A: Image.Image, image_B: Image.Image) -> Image.Image:\n",
+    "    merged_image = Image.new(CHANNELS, (MERGED_WIDTH, IMAGE_DIMENSION))\n",
+    "    \n",
+    "    merged_image.paste(image_A, (0,0))\n",
+    "    merged_image.paste(image_B, (IMAGE_DIMENSION,0))\n",
+    "\n",
+    "    return merged_image\n",
+    "\n",
+    "def merge_frames(folder_A_path: str, folder_B_path: str, output_folder_path: str):\n",
+    "    file_names = os.listdir(folder_A_path)\n",
+    "\n",
+    "    if not os.path.exists(output_folder_path):\n",
+    "        os.mkdir(output_folder_path)\n",
+    "\n",
+    "    for file_name in tqdm_notebook(file_names):\n",
+    "        image_A_path = os.path.join(folder_A_path, file_name)\n",
+    "        image_B_path = os.path.join(folder_B_path, file_name)\n",
+    "        image_A = Image.open(image_A_path)\n",
+    "        image_B = Image.open(image_B_path)\n",
+    "\n",
+    "        base_name = os.path.splitext(file_name)[0]\n",
+    "\n",
+    "        merged_image = merge_two_images(image_A, image_B)\n",
+    "        merged_image_output_path = os.path.join(output_folder_path, base_name.zfill(len(str(len(file_names)))) + \".png\")\n",
+    "\n",
+    "        merged_image.save(merged_image_output_path)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_train_test_val(raw_dataset_path: str, train_path: str, test_path: str, val_path: str):\n",
+    "    files = os.listdir(raw_dataset_path)\n",
+    "    total_file_count = len(files)\n",
+    "    logger.info(f\"Found total de-duplicated {total_file_count} images.\")\n",
+    "\n",
+    "    if not os.path.exists(train_path):\n",
+    "        os.mkdir(train_path)\n",
+    "    \n",
+    "    if not os.path.exists(test_path):\n",
+    "        os.mkdir(test_path)\n",
+    "\n",
+    "    if not os.path.exists(val_path):\n",
+    "        os.mkdir(val_path)\n",
+    "\n",
+    "    # Train\n",
+    "    no_of_files = math.floor(total_file_count * TRAIN_SPLIT)\n",
+    "    logger.info(f\"Moving {no_of_files} files to training set...\")\n",
+    "    for file_name in tqdm_notebook(random.sample(files, no_of_files)):\n",
+    "        shutil.move(os.path.join(raw_dataset_path, file_name), train_path)\n",
+    "\n",
+    "    # Test\n",
+    "    files = os.listdir(raw_dataset_path)\n",
+    "    no_of_files = math.floor(total_file_count * TEST_SPLIT)\n",
+    "    logger.info(f\"Moving {no_of_files} files to test set...\")\n",
+    "    for file_name in tqdm_notebook(random.sample(files, no_of_files)):\n",
+    "        shutil.move(os.path.join(raw_dataset_path, file_name), test_path)\n",
+    "\n",
+    "    # Val\n",
+    "    remaining_files = os.listdir(raw_dataset_path)\n",
+    "    logger.info(f\"Moving {len(remaining_files)} files to validation set...\")\n",
+    "    print(val_path)\n",
+    "    for file_name in tqdm_notebook(remaining_files):\n",
+    "        shutil.move(os.path.join(raw_dataset_path, file_name), val_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_frames(folder_A_path=A_3D_RAW_DATASET_PATH, folder_B_path=B_2D_RAW_DATASET_PATH, output_folder_path=SIDEBYSIDE_IMAGE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_dup_cmd = f\"image-cleaner {SIDEBYSIDE_IMAGE_PATH}\"\n",
+    "!{remove_dup_cmd}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_train_test_val(raw_dataset_path=SIDEBYSIDE_IMAGE_PATH, train_path=TRAIN_PATH, test_path=TEST_PATH, val_path=VAL_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
